Added an (unsafe) CreateView method. Also fixed a bunch of security issues with SQL Injection being possible on the methods.

--- a/C#/LaminariaCore-Databases/UnitTesting/UnitTesting.csproj
+++ b/C#/LaminariaCore-Databases/UnitTesting/UnitTesting.csproj
@@ -266,6 +266,7 @@
     <ItemGroup>
       <Content Include="assets\football.sql" />
       <Content Include="assets\school.sql" />
+      <Content Include="assets\SQLPGPS.sql" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
